--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,5 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment variables
+node_modules
+# Keep environment variables out of version control
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-# Database
-*.db
-*.sqlite
-
-# Logs
-logs
-*.log
-
-# Prisma generated files
 /src/generated/prisma
-
-# Build outputs
-dist/
-build/
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# TypeScript
-*.tsbuildinfo
