--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Veritabanı bağlantısı
-DATABASE_URL="postgresql://username:password@localhost:5432/database_name"
+DATABASE_URL=
 
 # Sunucu portu
-PORT=3000
+PORT=
 
 # Uygulama ortamı
-NODE_ENV=development
+NODE_ENV
